Improved keyboard navigation, manipulation of scroll to show correctly the active element

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             background-color: #fff;
             overflow-y: auto;
             /*height: 20rem;*/
-            max-height: 20rem!important;
+            max-height: 20.40rem!important;
             border: 1px solid rgba(0,0,0,.125);
             list-style-type: none;
             z-index: 2;
@@ -42,7 +42,7 @@
         }
 
         .___select-all-options li {
-            padding: .75rem 1.25rem;
+            padding: .375rem 1.25rem;
             border-bottom: 1px solid rgba(0,0,0,.125);
             margin-bottom: -1px;
         }
@@ -70,7 +70,7 @@
     </style>
     <div class="container mt-5">
         <label for="movies">Teste:</label>
-        <select name="movies" id="movies" class="form-control col-2">
+        <select name="movies" id="movies" class="col-2">
             <option value="1">The Godfather</option>
             <option value="2">The Wizard of Oz</option>
             <option value="3">Citizen Kane</option>
@@ -87,12 +87,6 @@
             <option value="14">Forrest Gump</option>
             <option value="15">Gone With the Wind</option>
         </select>
-    </div>
-
-    <div class="col-4">
-        <input id="p" class='form-control ___select-icon-input' autocomplete="off">
-        <label for="p"><img src="caret-down-solid.svg" class='___select-caret-down-icon' aria-hidden='true'></label>
-
     </div>
     <br>
 
